<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_icon" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/explore_icon" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_edit_profile"
            android:title="@string/edit_profile_icon" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_icon" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_icon" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_menu_privacy_policy"
            android:title="@string/privacy_policy_icon" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/help_icon" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contact_icon" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>