<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_user"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/signame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSignup"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/name"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/sigemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signame"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/sigpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigemail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/sigdob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigpassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/sigplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigdob"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/place"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <Button
        android:id="@+id/sigsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigplace"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_up1"
        android:textColor="#FFFFFF"
        android:clickable="true"/>
    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sigsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login_link"
        android:textColor="@color/purple_500"
        android:clickable="true"
        android:onClick="navigateToLoginActivity"/>

</RelativeLayout>
